kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-capstone-app
  labels:
    app: devops-capstone-app
spec:
  selector:
    matchLabels:
      app: devops-capstone-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  progressDeadlineSeconds: 1200
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: devops-capstone-app
    spec:
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - devops-capstone-app
              - key: "temporary"
                operator: In
                values:
                - "true"
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: udacity
        image: ngkatzios/devops-capstone-app
        imagePullPolicy: Always
        resources:
          limits:
            memory: 64Mi
            cpu: 250m
          requests:
            memory: 32Mi
            cpu: 200m
        ports:
        - containerPort: 10
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            scheme: HTTP
            port: 20000
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 2
          timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: devops-capstone-app
spec:
  type: LoadBalancer
  selector:
    app: devops-capstone-app
  ports:
    - name: http
      protocol: TCP
      port: 20000
      targetPort: 20000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-capstone-app
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "ingress-nginx"
